# CodeExecutor

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/CodeExecutor/: Builder.hpp  BuildingContext.hpp  CommonCompiler.hpp  CommonLinker.hpp  Compiler.hpp  Library.hpp  Linker.hpp  Object.hpp  Process.hpp  Source.hpp  filesystem.hpp
src/CodeExecutor/: Builder.cpp  BuildingContext.cpp  CommonCompiler.cpp  CommonLinker.cpp  Compiler.cpp  Library.cpp  Linker.cpp  Object.cpp  Process.cpp  Source.cpp
tests/: Building.cpp  CMakeLists.txt
